Some minor updates to proposal

--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -60,7 +60,8 @@
 Scalable Emulator-Based Bayesian Methods for Scientific Machine Learning
 \end{center}
 
-Computer models take advantage of existing scientific knowledge and are invaluable for tackling a wide range of problems. However, unknown model parameters and biases due to model limitations need to be addressed by incorporating statistical and machine learning methods. The task of using noisy real-world data to solve these problems continues to present significant challenges, requiring tradeoffs between realism and computational and statistical feasibility. Given the ubiquity of computer models in informing evidence-based policy, it is essential to address these problems while simultaneously providing a full accounting of uncertainties. My proposed research aims to confront these challenges by developing novel methodological and computational approaches for integrating large-scale datasets with expensive computer simulations. 
+By taking advantage of existing scientific knowledge, computer models have become indispensable tools for tackling a wide range of problems [cite].
+However, unknown model parameters and biases due to model limitations need to be addressed by incorporating statistical and machine learning methods. The task of using noisy real-world data to solve these problems continues to present significant challenges, requiring tradeoffs between realism and computational and statistical feasibility. Given the ubiquity of computer models in informing evidence-based policy, it is essential to address these issues while simultaneously providing a full accounting of uncertainties. My proposed research aims to confront these challenges by developing novel methodological and computational approaches for integrating large-scale datasets with expensive computer simulations. 
 
 % The effectiveness of formally combining scientific theory with statistical and machine learning methods is increasingly being recognized \cite{Willcox, Laubmeier, Wikle}. 
  % Computer models have become essential tools at this scientific-statistical interface, tackling problems from 
@@ -75,7 +76,7 @@ Computer models take advantage of existing scientific knowledge and are invaluab
 Complex processes are commonly analyzed using a computer model (i.e., simulator) $f$, where the output is a function of some unknown, unobserved parameter $\theta$.
 For example, to study the terrestrial carbon cycle, ecologists use a computer model 
 that predicts the net exchange of carbon between an ecosystem and the atmosphere, which requires specifying values for unknown parameters like the soil respiration rate \cite{Fer}.
-A Bayesian statistical formulation is typically employed to estimate (i.e., calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. Performing inference for $\theta$ typically involves running an iterative procedure like Markov Chain Monte Carlo (MCMC) to sample from the posterior $p(\theta|y)$. In scientific applications, challenges in inference and uncertainty quantification commonly arise due to (i.) prohibitively long simulator runtimes, and (ii.) complex spatiotemporal dynamics of the underlying physical process. A standard solution to the former issue is to approximate $f$ with a Gaussian process (GP) emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$, where $m$ and $k$ are the mean and covariance functions, respectively, learned from a small number of model runs \cite{Fer, Kennedy, Cleary}. While this approximation has become standard practice, few studies have considered proper quantification and propagation of the emulator uncertainty \cite{Fer, Cleary}. Moreover, existing attempts to incorporate statistical models of large-scale spatiotemporal dynamics have relied on simplified alternatives to full Bayesian inference, sacrificing uncertainty quantification to ease computational demands \cite{Sun}.
+A Bayesian statistical formulation is typically employed to estimate (i.e., calibrate) these unknown parameters by comparing simulation outputs to field observations $y$ of the true physical process \cite{Kennedy}. Performing inference for $\theta$ typically involves running an iterative procedure like Markov Chain Monte Carlo (MCMC) to sample from the posterior $p(\theta|y)$. In scientific applications, challenges in inference and uncertainty quantification commonly arise due to (i.) prohibitively long simulator runtimes, and (ii.) complex spatiotemporal dynamics of the underlying physical process. A standard solution to the former issue is to approximate $f$ with a Gaussian process (GP) emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$, where the mean and covariance functions--$m$ and $k$, respectively-- are learned from a small number of model runs \cite{Fer, Kennedy, Cleary}. While this approximation has become standard practice, few studies have considered proper quantification and propagation of the emulator uncertainty \cite{Fer, Cleary}. Moreover, existing attempts to incorporate statistical models of large-scale spatiotemporal dynamics have relied on simplified alternatives to full Bayesian inference, sacrificing uncertainty quantification to ease computational demands \cite{Sun}.
 My research goal is to advance methodology that jointly addresses these two issues, enabling accurate emulator-based inference for complex spatiotemporal systems. 
 
 % Uncertainty quantification is further complicated when spatiotemporal dynamics are included. The existing computer modeling literature has focused on spatially or temporally indexed simulator outputs \cite{Fadikar}, but rarely considers variation in process parameters. 
@@ -94,7 +95,7 @@ I will then extend these ideas to error models for simulators with time-indexed 
  %My analysis will include the derivation of theoretical results obtained by extending existing parameter calibration theory \cite{Tuo}, numerical tests from the 
  %\textit{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to validate against more computationally intensive approaches. 
 
- \textbf{2. Spatiotemporal Dynamics.} I will next embed the emulator framework within a spatiotemporal statistical model, building upon my previous work to ensure a holistic accounting of uncertainties. I will adopt a state-space framework, considering dynamical models generally of the form $y(s, t) = f(\theta(s, t)) + \epsilon(s, t)$, where $(s, t)$ indicates space-time dependence \cite{Wikle, Hefley}. I will initially explore a linear Markovian model for $\theta$, and analyze combinations of spatial basis function approaches with smoothing GP priors to obtain tractable simulation-based spatiotemporal models. 
+ \textbf{2. Spatiotemporal Dynamics.} Next, I will embed the emulator framework within a spatiotemporal statistical model, building upon my previous work to ensure a holistic accounting of uncertainties. I will adopt a state-space framework, considering dynamical models generally of the form $y(s, t) = f(\theta(s, t)) + \epsilon(s, t)$, where $(s, t)$ indicates space-time dependence \cite{Wikle, Hefley}. I will initially explore a linear Markovian model for $\theta$, and analyze combinations of spatial basis function approaches with smoothing GP priors to obtain tractable simulation-based spatiotemporal models. 
 These extensions yield high-dimensional hierarchical models that pose problems for existing inference algorithms. To address these issues I will develop novel methodology that extends recent work on inference for high-dimensional partially observed dynamic systems \cite{Park}. Integrating these methods with my GP emulation and uncertainty quantification framework will face the additional computational bottleneck posed by the poor scalability of GP prediction. To deal with this I will build upon the large body of work in GP approximations, starting from the viewpoint of parallelizable localized approaches \cite{Gramacy}. I will extend my uncertainty quantification work to incorporate this additional source of approximation uncertainty. 
 
 \noindent
