--- a/nsf_proposal.tex
+++ b/nsf_proposal.tex
@@ -104,6 +104,8 @@ These extensions yield high-dimensional hierarchical models that pose problems f
 \noindent
 \textbf{Broader Impacts.} All methodological developments will be implemented in open-source, well-documented software packages, intended for use across a wide array of scientific disciplines. These packages will also be integrated in the \textit{Predictive Ecosystem Analyzer}, an open-source software tool that allows researchers and land managers to work with ecological models and observational data \cite{Fer}. This has the potential to drastically accelerate the pace of ecological model development, which plays a pivotal role in the management of national forests and public lands, and projections of climate change impacts. Through my collaboration with Michael Dietze, director of the Ecological Forecasting Initiative, I will also participate in an existing Sloan Foundation supported partnership that serves three minority-serving institutions with large tribal populations (Salish-Kootenai College, Cal Poly Humboldt, U. New Mexico-Gallup). I will support culturally-sensitive training in environmental data science as an online mentor, working with undergraduates in the program and helping them pursue further research opportunities, such as REUs. 
 
+[1] Fer, I. et al, Biogeosciences 2018, 15, 5801–5830.
+
 \begin{thebibliography}{20}
 \bibitem{Willcox} Willcox, K.E. et al. Nat Comput Sci 1 2021, 166–168.
 \bibitem{Laubmeier} Laubmeier, A. et al. Trends Ecol Evol 2020, 35(12):1090-1099.
@@ -126,11 +128,6 @@ These extensions yield high-dimensional hierarchical models that pose problems f
 \bibitem{Park} Park, J. et al. Statistics and Computing 2020. 30:1497–1522.
 \bibitem{Gramacy} Gramacy R. et al. Journal of Computational and Graphical Statistics 2015, 24;2: 561-578.
 \bibitem{Fer2} Fer, I. et al. bioRxiv 2021; doi: https://doi.org/10.1101/2021.04.28.441243. 
-
-
-
-
-
 \end{thebibliography}
 
 
